# class_excercise

./: README.md  fix_tfjs_input_shapes.py  index.html  pyproject.toml  script.js
src/class_excercise/: __init__.py  fix_tfjs_input_shapes.py
test/: index.test.js  script.test.js
tfjs_model/: model (1).json
